export const snapshot = {};

snapshot[`isPartialOf<T> > returns properly named predicate function 1`] = `
"isObjectOf({
  a: asOptional(isNumber),
  b: asOptional(isUnionOf([
    isString,
    isUndefined
  ])),
  c: asOptional(isBoolean),
  d: asOptional(asReadonly(isString))
})"
`;

snapshot[`isPartialOf<T> > returns properly named predicate function 2`] = `
"isObjectOf({
  a: asOptional(isNumber),
  b: asOptional(isUnionOf([
    isString,
    isUndefined
  ])),
  c: asOptional(isBoolean),
  d: asOptional(asReadonly(isString))
})"
`;

snapshot[`isPartialOf<T> > with symbol properties > returns properly named predicate function 1`] = `
"isObjectOf({
  a: asOptional(isNumber),
  Symbol(b): asOptional(isUnionOf([
    isString,
    isUndefined
  ])),
  Symbol(c): asOptional(isBoolean),
  Symbol(c): asOptional(asReadonly(isString))
})"
`;

snapshot[`isPartialOf<T> > with symbol properties > returns properly named predicate function 2`] = `
"isObjectOf({
  a: asOptional(isNumber),
  Symbol(b): asOptional(isUnionOf([
    isString,
    isUndefined
  ])),
  Symbol(c): asOptional(isBoolean),
  Symbol(c): asOptional(asReadonly(isString))
})"
`;
